crates/math-core/tests/snapshots/error_test__end_without_open.snap
---
source: crates/math-core/tests/error_test.rs
expression: "\\end{matrix}"
---
Error: Unmatched closing token: "\end{...}".
   ╭─[ <input>:1:1 ]
   │
 1 │ \end{matrix}
   │ ──────┬─────  
   │       ╰─────── no matching opening for this
───╯
